--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,3 +29,8 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+    - run: mkdir build && cp target/*.jar build
+    - uses: actions/upload-artifact@v3
+      with:
+        name: Package
+        path: build
